add locales and redux for balance and transactions

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -13,5 +13,14 @@
       "notFound": "Not found!",
       "notExist": "This page does not exist"
     }
+  },
+  "balance": { "title": "Your balance" },
+  "homeTable": {
+    "date": "Date",
+    "type": "Type",
+    "category": "Category",
+    "comment": "Comment",
+    "sum": "Sum",
+    "balance": "Balance"
   }
 }
