--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -13,5 +13,14 @@
       "notFound": "Не знайдено!",
       "notExist": "Ця сторінка не існує"
     }
+  },
+  "balance": { "title": "Ваш баланс" },
+  "homeTable": {
+    "date": "Дата",
+    "type": "Тип",
+    "category": "Категорія",
+    "comment": "Коментар",
+    "sum": "Сума",
+    "balance": "Баланс"
   }
 }
