--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -12,6 +12,10 @@
     "404": {
       "notFound": "Не знайдено!",
       "notExist": "Ця сторінка не існує"
+    } ,
+    "navigation": {
+      "Home": "Домашня сторінка",
+      "Statistics": "Статистика"
     }
   },
   "balance": { "title": "Ваш баланс" },
