--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -33,5 +33,8 @@
     "comment": "Comment",
     "sum": "Sum",
     "balance": "Balance"
+  },
+  "placeholderHomeTable": {
+    "title": " You have no transactions yet"
   }
 }
