--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -19,7 +19,7 @@
     "404": {
       "notFound": "Не знайдено!",
       "notExist": "Ця сторінка не існує"
-    } ,
+    },
     "navigation": {
       "Home": "Домашня сторінка",
       "Statistics": "Статистика"
@@ -33,5 +33,8 @@
     "comment": "Коментар",
     "sum": "Сума",
     "balance": "Баланс"
+  },
+  "placeholderHomeTable": {
+    "title": " У вас поки що немає транзакцій"
   }
 }
