--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -14,7 +14,7 @@
   "session": {},
   "alert": {},
   "dialog": {},
-  "validation": {},
+
   "title": {
     "404": {
       "notFound": "Not found!",
@@ -33,5 +33,18 @@
     "comment": "Comment",
     "sum": "Sum",
     "balance": "Balance"
+  },
+  "errors": {
+    "loginError": "Invalid data, please try again"
+  },
+  "validation": {
+    "email": "Email is requred field",
+    "password": "Password is requred field",
+    "passwordMatch": "Passwords are not the same",
+    "confirmPassword": "Confirm Password is requred field",
+    "firstName": "First name is requred field"
+  },
+  "messages": {
+    "signupSuccess": "Registration successful, please enter your email and password"
   }
 }
