--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -14,12 +14,18 @@
   "session": {},
   "alert": {},
   "dialog": {},
-  "validation": {},
+  "validation": {
+    "email": "Поле електронної пошти є обов’язковим",
+    "password": "Поле для введення пароля є обов’язковим",
+    "passwordMatch": "Паролі не однакові",
+    "confirmPassword": "Поле підтвердження пароля є обов’язковим",
+    "firstName": "Ім'я є обов'язковим полем"
+  },
   "title": {
     "404": {
       "notFound": "Не знайдено!",
       "notExist": "Ця сторінка не існує"
-    } ,
+    },
     "navigation": {
       "Home": "Домашня сторінка",
       "Statistics": "Статистика"
@@ -33,5 +39,11 @@
     "comment": "Коментар",
     "sum": "Сума",
     "balance": "Баланс"
+  },
+  "errors": {
+    "loginError": "Невірні дані, спробуйте ще раз"
+  },
+  "messages": {
+    "signupSuccess": "Реєстрація успішна, введіть адресу електронної пошти та пароль"
   }
 }
