--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -47,7 +47,8 @@
     "passwordMatch": "Passwords are not the same",
     "confirmPassword": "Confirm Password is requred field",
     "firstName": "First name is requred field",
-    "minPasswordLength": "Minimum password length 6 characters"
+    "minPasswordLength": "Minimum password length 6 characters",
+    "maxPasswordLength": "Maximum password length 12 characters"
   },
   "messages": {
     "signupSuccess": "Registration successful, please enter your email and password"
