Добавил локализацию+заменил ховер, фокус

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -72,5 +72,14 @@
       "add": "Add",
       "cancel": "Cancel"
     }
+  },
+  "modal-close": {
+    "title": {
+      "p": "Do you really want to leave?"
+    },
+    "button": {
+      "button-no": "No",
+      "button-yes": "Yes"
+    }
   }
 }
