--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -72,5 +72,14 @@
       "add": "Додати",
       "cancel": "Скасувати"
     }
+  },
+  "modal-close": {
+    "title": {
+      "p": "Ви дійсно бажаете вийти?"
+    },
+    "button": {
+      "button-no": "Ні",
+      "button-yes": "Так"
+    }
   }
 }
