--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -50,7 +50,11 @@
     "loginError": "Невірні дані, спробуйте ще раз"
   },
   "messages": {
-    "signupSuccess": "Реєстрація успішна, введіть адресу електронної пошти та пароль"
+    "signupSuccess": "Реєстрація успішна, введіть адресу електронної пошти та пароль",
+    "signupError": "Вибачте, реєстрація неуспішна. Спробуйте ще.",
+    "refreshError": "Вибачте, ваш токен недійсний або час його дії закінчився.",
+    "transactionSuccess": "Ваша транзакція була успішна",
+    "transactionError": "Щось пішло не так"
   },
 
   "placeholderHomeTable": {
